# CPP-RayTracer

./: .gitignore
COSIG_GW1_1150434_1150625/: CMakeLists.txt  boundingBox.cpp  boundingBox.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  hitable.hpp  image.cpp  image.hpp  import_file.cpp  import_file.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  ray.hpp  result.ppm  sceneObject.cpp  sceneObject.hpp  sphere.cpp  sphere.hpp  transformation.cpp  transformation.hpp  transformation_utils.cpp  transformation_utils.hpp  triangle.cpp  triangle.hpp  triangles.cpp  triangles.hpp  vec3.hpp  vertex.cpp  vertex.hpp
COSIG_GW1_1150434_1150625.visualstudioproj/RayTracer/: RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters  result.ppm
COSIG_GW1_1150434_1150625.xcodeproj/: project.pbxproj
COSIG_GW1_1150434_1150625.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
COSIG_GW1_1150434_1150625.xcodeproj/project.xcworkspace/xcuserdata/fabiolourenco.xcuserdatad/: UserInterfaceState.xcuserstate
COSIG_GW1_1150434_1150625/CPPRayTracer/: CPPRayTracer.sln  CPPRayTracer.vcxproj  CPPRayTracer.vcxproj.filters
COSIG_GW1_1150434_1150625/model/: image.hpp  light.hpp
COSIG_GW1_1150434_1150625/resources/: evaluation_scene.txt
COSIG_GW1_1150434_1150625/src/: main.cpp
COSIG_GW1_1150434_1150625/src/model/: material.hpp  sceneObject.cpp  transformation.cpp
COSIG_GW1_1150434_1150625/src/resources/: test_scene.txt
COSIG_GW1_1150434_1150625/utils/: import_file.hpp
(+1 files in other folders)
